# mujoco_ant_scene

./: .gitignore  ant_pinpad.py  collect_expert_dataset.py  pyproject.toml  tasks.py  train.py
configs/: train_config.yaml
configs/env/: ant_pinpad.yaml
configs/model/: ppo_ant.yaml  ppo_ant_sbx.yaml
configs/train/: ant_pinpad.yaml
envs/: __init__.py  ant_pinpad_gym.py  callbacks.py
